fix overflow scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,7 @@
 }
 
 .ptro-bar > div {
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .ptro-info {
